added ./ for image paths

--- a/proj1/index.html
+++ b/proj1/index.html
@@ -67,7 +67,7 @@
         Here's a screenshot of basic/test4.svg working.
         It is zoomed on a jaggy on the red triangle.
       </p>
-      <img src="images/task1test4redjaggy.png" align="middle" width="400px" />
+      <img src="./images/task1test4redjaggy.png" align="middle" width="400px" />
 
 
       <h3 align="middle">Part 2: Antialiasing triangles</h3>
@@ -107,22 +107,22 @@
         <table style="width=100%">
           <tr>
             <td>
-              <img src="images/wu2sr1.png" align="middle" width="400px" />
+              <img src="./images/wu2sr1.png" align="middle" width="400px" />
               <figcaption align="middle">Supersample rate 1 per pixel</figcaption>
             </td>
             <td>
-              <img src="images/wu2sr4.png" align="middle" width="400px" />
+              <img src="./images/wu2sr4.png" align="middle" width="400px" />
               <figcaption align="middle">Supersample rate 4 per pixel</figcaption>
             </td>
           </tr>
           <br />
           <tr>
             <td>
-              <img src="images/wu2sr9.png" align="middle" width="400px" />
+              <img src="./images/wu2sr9.png" align="middle" width="400px" />
               <figcaption align="middle">Supersample rate 9 per pixel</figcaption>
             </td>
             <td>
-              <img src="images/wu2sr9.png" align="middle" width="400px" />
+              <img src="./images/wu2sr9.png" align="middle" width="400px" />
               <figcaption align="middle">Supersample rate 16 per pixel</figcaption>
             </td>
           </tr>
@@ -132,7 +132,7 @@
       <h3 align="middle">Part 3: Transforms</h3>
 
 
-        <img src="images/task3_robot.png" class="center" width="400px" />
+        <img src="./images/task3_robot.png" class="center" width="400px" />
         <p>
             Here is cubeman doing a victory pose with his arms held high and feet wide. His torso was scaled in the x-direction to be slimmer. The left and right arms and legs are symmetrical,
             and his thighs are rotated outward from his torso. His arms are rotated and brought up. Adjustments were made to the positions of the arms and legs so they were close to the torso.
@@ -142,7 +142,7 @@
 
       <h3 align="middle">Part 4: Barycentric coordinates</h3>
 
-        <img src="images/task4_barycentric.png" class="center" width="400px" />
+        <img src="./images/task4_barycentric.png" class="center" width="400px" />
         <p>
             Barycentric coordinates can be understood as defining a point using the weights ("masses") at the vertices, such that the point is located at the "center of mass."
             For a triangle with red, green, blue as values on the vertices, the color of a point is given as a combination of RGB, weighted to satisfy the "center of mass".
@@ -150,7 +150,7 @@
             This has the effect of linearly interpolating the values at the vertices.
         </p>
 
-        <img src="images/task4_colorwheel.png" class="center" width="400px" />
+        <img src="./images/task4_colorwheel.png" class="center" width="400px" />
 
       <h3 align="middle">Part 5: "Pixel sampling" for texture mapping</h3>
       <p>
@@ -182,22 +182,22 @@
         <table style="width=100%">
           <tr>
             <td>
-              <img src="images/wu5_nearest_ss1.png" align="middle" width="400px" />
+              <img src="./images/wu5_nearest_ss1.png" align="middle" width="400px" />
               <figcaption align="middle">Nearest pixel sample method; Supersample rate 1</figcaption>
             </td>
             <td>
-              <img src="images/wu5_bi_ss1.png" align="middle" width="400px" />
+              <img src="./images/wu5_bi_ss1.png" align="middle" width="400px" />
               <figcaption align="middle">Bilinear pixel sample method; Supersample rate 1</figcaption>
             </td>
           </tr>
           <br />
           <tr>
             <td>
-              <img src="images/wu5_nearest_ss16.png" align="middle" width="400px" />
+              <img src="./images/wu5_nearest_ss16.png" align="middle" width="400px" />
               <figcaption align="middle">Nearest pixel sample method; Supersample rate 16</figcaption>
             </td>
             <td>
-              <img src="images/wu5_bi_ss16.png" align="middle" width="400px" />
+              <img src="./images/wu5_bi_ss16.png" align="middle" width="400px" />
               <figcaption align="middle">Bilinear pixel sample method; Supersample rate 16</figcaption>
             </td>
           </tr>
@@ -224,11 +224,11 @@
             <table style="width=100%">
                 <tr>
                     <td>
-                        <img src="images/task6_zero_near.png" align="middle" width="300px" />
+                        <img src="./images/task6_zero_near.png" align="middle" width="300px" />
                         <figcaption align="middle">L_ZERO with P_NEAREST</figcaption>
                     </td>
                     <td>
-                        <img src="images/task6_zero_bi.png" align="middle" width="300px" />
+                        <img src="./images/task6_zero_bi.png" align="middle" width="300px" />
                         <figcaption align="middle">L_ZERO with P_LINEAR</figcaption>
                     </td>
 
@@ -236,12 +236,12 @@
                 <br />
                 <tr>
                     <td>
-                        <img src="images/task6_near_near.png" align="middle" width="300px" />
+                        <img src="./images/task6_near_near.png" align="middle" width="300px" />
                         <figcaption align="middle">L_NEAREST with P_NEAREST</figcaption>
                     </td>
 
                     <td>
-                        <img src="images/task6_near_bi.png" align="middle" width="300px" />
+                        <img src="./images/task6_near_bi.png" align="middle" width="300px" />
                         <figcaption align="middle">L_NEAREST with P_LINEAR</figcaption>
                     </td>
 
